--- a/xray/bin/config.json
+++ b/xray/bin/config.json
@@ -1,98 +1,35 @@
 {
-  "log": null,
-  "routing": {
-    "rules": [
-      {
-        "inboundTag": [
-          "api"
-        ],
-        "outboundTag": "api",
-        "type": "field"
-      },
-      {
-        "ip": [
-          "geoip:private"
-        ],
-        "outboundTag": "blocked",
-        "type": "field"
-      },
-      {
-        "outboundTag": "blocked",
-        "protocol": [
-          "bittorrent"
-        ],
-        "type": "field"
-      }
-    ]
-  },
-  "dns": null,
-  "inbounds": [
-    {
-      "listen": "127.0.0.1",
-      "port": 62789,
-      "protocol": "dokodemo-door",
-      "settings": {
-        "address": "127.0.0.1"
-      },
-      "streamSettings": null,
-      "tag": "api",
-      "sniffing": null
+    "log": {
+        "loglevel": "none"
     },
-    {
-      "listen": null,
-      "port": 20001,
-      "protocol": "shadowsocks",
-      "settings": {
-        "method": "aes-256-gcm",
-        "password": "aa321321",
-        "network": "tcp,udp"
-      },
-      "streamSettings": {
-        "network": "tcp",
-        "security": "none",
-        "tcpSettings": {
-          "header": {
-            "type": "none"
-          }
+    "routing": {
+        "domainStrategy": "IPOnDemand",
+        "rules": [{
+            "type": "field",
+            "inboundTag": ["ipint1"],
+            "outboundTag": "ipout1"
+        }]
+    },
+    "inbounds": [{
+        "tag": "ipint1",
+        "listen": "0.0.0.0",
+        "port": 20001,
+        "protocol": "shadowsocks",
+        "sniffing": {
+            "enabled": true,
+            "destOverride": ["http", "tls"]
+        },
+        "settings": {
+            "method": "aes-256-gcm",
+            "password": "aa321321",
+            "network": "tcp,udp"
         }
-      },
-      "tag": "inbound-20800",
-      "sniffing": {
-        "enabled": true,
-        "destOverride": [
-          "http",
-          "tls"
-        ]
-      }
-    }
-  ],
-  "outbounds": [
-    {
-      "protocol": "freedom",
-      "settings": {}
-    },
-    {
-      "protocol": "blackhole",
-      "settings": {},
-      "tag": "blocked"
-    }
-  ],
-  "transport": null,
-  "policy": {
-    "system": {
-      "statsInboundDownlink": true,
-      "statsInboundUplink": true
-    }
-  },
-  "api": {
-    "services": [
-      "HandlerService",
-      "LoggerService",
-      "StatsService"
-    ],
-    "tag": "api"
-  },
-  "stats": {},
-  "reverse": null,
-  "fakeDns": null
+    }],
+    "outbounds": [{
+        "protocol": "freedom",
+        "tag": "ipout1",
+        "sendThrough": "0.0.0.0"
+    }, {
+        "protocol": "blackhole"
+    }]
 }
